reload fluxo-caixa

--- a/src/views/fluxo-caixa.ejs
+++ b/src/views/fluxo-caixa.ejs
@@ -1602,7 +1602,7 @@ async function executeBulkDelete() {
       showResults(data.resultados);
       
       setTimeout(() => {
-        window.location.reload();
+        window.location.href = window.location.href;
       }, 3000);
     } else {
       alert('Erro: ' + data.message);
